--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "^5.2.3",
+    "fortawesome": "^0.0.1-security",
+    "ngx-mask": "^15.1.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^8.3.2",
